--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\scripts\GameModel.cs" />
      <Compile Include="Assets\scripts\LANBroadcastService.cs" />
      <Compile Include="Assets\scripts\Networking.cs" />
+     <Compile Include="Assets\scripts\PixelInset.cs" />
      <Compile Include="Assets\scripts\Player.cs" />
      <Compile Include="Assets\scripts\Water.cs" />
      <None Include="Assets\Standard Assets\Water (Pro Only)\Sources\Shaders\FX-Water.shader" />
